--- a/baraholka/templates/index.html
+++ b/baraholka/templates/index.html
@@ -37,30 +37,59 @@
     <div style="background: #eeeeee;">
         {% if current_user.is_authenticated %}
         <div style="background: #ffffff;box-shadow: 0px 0px 10px 0px rgba(80,94,108,0.71);margin-bottom: 1px;">
-            <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1000px;">
+            <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1050px;">
                 <div class="row" style="margin-left: 0px;margin-right: 0px;">
-                    <div class="col-lg-12 col-md-12" style="padding-left: 0px;padding-right: 0px;margin-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;" src="{{url_for('.static', filename='profile/assets/img/baraholkaBlack.png')}}"></a><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 12px;" href="#">Категории</a>
-                        <form class="form-inline" target="_self" style="background: rgba(255,255,255,0);padding-right: 0px;padding-left: 0px;display: inline-block;height: 38px;margin-left: 15px;padding-top: 0px;">
-                            <div class="form-group" style="background: #e3e3e3;border-radius: 99px;border: 2px none #eeeeee;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='profile/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 275px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 16px;height: 38px;display: inline-block;background: #e3e3e3;border-style: none;border-color: #eeeeee;"></div>
-                        </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;margin-right: -2px;display: inline-block;margin-left: 32px;" href="/newadvert/">Создать объявление</a><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 20px;" href="/login">Профиль</a>
+                    <div class="col-lg-12 col-md-12 text-center" style="padding-left: 0px;padding-right: 0px;margin-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/baraholkaBlack.png')}}"></a>
+                        <form class="form-inline" id="filter-form" target="_self" style="background: rgba(255,255,255,0);padding-right: 0px;padding-left: 0px;display: inline-block;height: 38px;padding-top: 0px;margin-left: 18px;">
+                            <div class="form-group"><select class="form-control" style="display: inline-block;width: 160px;font-size: 14px;background: #e3e3e3;margin-left: 0px;height: 38px;text-align: left;padding-left: 5px;padding-right: 12px;box-shadow: 0px 0px;border-radius: 10px;border-style: none;color: rgb(64,64,64);" name="category" onchange="this.form.submit()">
+                                    <option value="12" selected="">Недвижимость</option>
+                                    <option value="13">This is item 2</option>
+                                    <option value="14">This is item 3</option>
+                                </select></div>
+                            <div class="form-group" style="background: #e3e3e3;border-radius: 99px;border: 2px none #eeeeee;margin-left: 18px;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 260px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 15px;height: 38px;display: inline-block;background: #e3e3e3;border-style: none;border-color: #eeeeee;" placeholder="Поиск"></div>
+                        </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;margin-right: -2px;display: inline-block;margin-left: 18px;" href="/newadvert/">Создать объявление</a><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 18px;" href="/login">Профиль</a>
                     </div>
                 </div>
             </div>
         </div>
         {% else %}
         <div style="background: #ffffff;box-shadow: 0px 0px 10px 0px rgba(80,94,108,0.71);margin-bottom: 1px;">
-            <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1000px;">
+            <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1050px;">
                 <div class="row" style="margin-left: 0px;margin-right: 0px;">
-                    <div class="col-lg-12 col-md-12" style="padding-left: 0px;padding-right: 0px;margin-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;" src="{{url_for('.static', filename='profile/assets/img/baraholkaBlack.png')}}"></a><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 12px;" href="#">Категории</a>
-                        <form class="form-inline" target="_self" style="background: rgba(255,255,255,0);padding-right: 0px;padding-left: 0px;display: inline-block;height: 38px;margin-left: 15px;padding-top: 0px;">
-                            <div class="form-group" style="background: #e3e3e3;border-radius: 99px;border: 2px none #eeeeee;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='profile/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 275px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 16px;height: 38px;display: inline-block;background: #e3e3e3;border-style: none;border-color: #eeeeee;"></div>
-                        </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 240px;" href="/login">Войти</a>
+                    <div class="col-lg-12 col-md-12 text-center" style="padding-left: 0px;padding-right: 0px;margin-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/baraholkaBlack.png')}}"></a>
+                        <form class="form-inline" id="filter-form" target="_self" style="background: rgba(255,255,255,0);padding-right: 0px;padding-left: 0px;display: inline-block;height: 38px;padding-top: 0px;margin-left: 18px;">
+                            <div class="form-group"><select class="form-control" style="display: inline-block;width: 160px;font-size: 14px;background: #e3e3e3;margin-left: 0px;height: 38px;text-align: left;padding-left: 5px;padding-right: 12px;box-shadow: 0px 0px;border-radius: 10px;border-style: none;color: rgb(64,64,64);" name="category" onchange="this.form.submit()">
+                                    <option value="12" selected="">Недвижимость</option>
+                                    <option value="13">This is item 2</option>
+                                    <option value="14">This is item 3</option>
+                                </select></div>
+                            <div class="form-group" style="background: #e3e3e3;border-radius: 99px;border: 2px none #eeeeee;margin-left: 18px;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 260px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 15px;height: 38px;display: inline-block;background: #e3e3e3;border-style: none;border-color: #eeeeee;" placeholder="Поиск"></div>
+                        </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 235px;" href="/login">Войти</a>
                     </div>
                 </div>
             </div>
         </div>
         {% endif %}
-        <div style="padding-top: 0px;background: rgba(211,211,211,0);margin-top: 25px;">
+
+
+
+
+
+
+        <div style="margin-top: 20px;">
+            <div class="container" style="padding-left: 0px;padding-right: 0px;width: 900px;">
+                <div class="row" style="margin-left: 0px;margin-right: 0px;">
+                    <div class="col-lg-12 col-md-12" style="padding-left: 0px;padding-right: 0px;margin-bottom: 0px;">
+                        <p style="display: inline-block;margin-bottom: 0px;font-size: 16px;margin-left: 2px;">Сортировка</p><select style="display: inline-block;width: 195px;font-size: 14px;background: #d2d2d2;text-align: left;padding-left: 5px;padding-right: 12px;box-shadow: 0px 0px;border-radius: 10px;border-style: none;height: 30px;color: rgb(50,50,50);margin-left: 12px;" name="sortby" form="filter-form" onchange="this.form.submit()">
+                            <option value="12" selected="">По дате</option>
+                            <option value="13">This is item 2</option>
+                            <option value="14">This is item 3</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div style="padding-top: 0px;background: rgba(211,211,211,0);margin-top: 15px;">
             <div class="container" style="padding-right: 0px;padding-left: 0px;width: 900px;">
                 {% for row in advertsGrid %}
                 <div class="row" style="margin-left: 0px;margin-right: 0px;">
