--- a/baraholka/templates/advcreate.html
+++ b/baraholka/templates/advcreate.html
@@ -45,9 +45,9 @@
                     <div class="col-lg-12 col-md-12 text-center" style="padding-left: 0px;padding-right: 0px;margin-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/baraholkaBlack.png')}}"></a>
                         <form class="form-inline" id="filter-form" target="_self" style="background: rgba(255,255,255,0);padding-right: 0px;padding-left: 0px;display: inline-block;height: 38px;padding-top: 0px;margin-left: 18px;">
                             <div class="form-group"><select class="form-control" style="display: inline-block;width: 160px;font-size: 14px;background: #e3e3e3;margin-left: 0px;height: 38px;text-align: left;padding-left: 5px;padding-right: 12px;box-shadow: 0px 0px;border-radius: 10px;border-style: none;color: rgb(64,64,64);" name="category" onchange="this.form.submit()">
-                                    <option value="12" selected="">Недвижимость</option>
-                                    <option value="13">This is item 2</option>
-                                    <option value="14">This is item 3</option>
+                                {% for category in searchCategories %}
+                                <option {{category.selected}}>{{category.name}}</option>
+                                {% endfor %}
                                 </select></div>
                             <div class="form-group" style="background: #e3e3e3;border-radius: 99px;border: 2px none #eeeeee;margin-left: 18px;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 260px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 15px;height: 38px;display: inline-block;background: #e3e3e3;border-style: none;border-color: #eeeeee;" placeholder="Поиск"></div>
                         </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 214px;" href="/login">Профиль</a>
@@ -64,7 +64,7 @@
                     <div class="form-group"><textarea class="form-control" style="font-size: 16px;background: #efefef;color: rgb(80, 94, 108);height: 125px;max-width: 920px;min-width: 920px;" placeholder="Описание" name="description"></textarea></div>
                     <div class="form-group"><input class="form-control" type="text" name="address" placeholder="Адрес" style="font-size: 16px;background: #efefef;width: 475px;display: inline-block;" required><select class="form-control" style="display: inline-block;width: 200px;font-size: 16px;background: #efefef;margin-left: 42px;" name="category" required>
                             {% for category in categories %}
-                            <option>{{category}}</option>
+                            <option {{category.selected}}>{{category.name}}</option>
                             {% endfor %}
                         </select><input class="form-control" type="number" name="price" placeholder="Цена" style="font-size: 16px;background: #efefef;width: 175px;display: inline-block;margin-left: 25px;" min="0"></div>
                     <div class="form-group">
