--- a/baraholka/templates/adv.html
+++ b/baraholka/templates/adv.html
@@ -7,10 +7,13 @@
 
 {% block scripts %}
     {{super()}}
+
     <script src="{{url_for('.static', filename='adv/assets/js/jquery.min.js')}}"></script>
-    <script src="{{url_for('.static', filename='adv/assets/bootstrap/js/bootstrap.min.js')}}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
+    <script src="{{url_for('.static', filename='adv/assets/bootstrap/js/bootstrap.min.js')}}"></script>
     <script src="{{url_for('.static', filename='adv/assets/js/Simple-Slider.js')}}"></script>
+
+
 {% endblock %}
 
 {% block styles %}
@@ -91,7 +94,13 @@
                         <div class="carousel slide" data-ride="carousel" id="carousel-1" data-interval="0">
                             <div class="carousel-inner">
                                 {% for image in advert.images %}
-                                <div class="item {{image.active}} text-center" style="width: 720px;max-width: 720px;height: 400px;max-height: 400px;"><div class = "text-center"><img src="{{image.path}}" alt="Slide Image" style="height: {{image.h}}px;max-height: 400px;width: {{image.w}}px;max-width: 720px;"></div></div>
+                                <div class="item {{image.active}} text-center" style="width: 720px;max-width: 720px;height: 400px;max-height: 400px;">
+                                    <div class="container" style="width: 720px;height: 400px;">
+                                        <div class="row" style="display: flex;align-items: center;height: 400px;">
+                                            <div class="col-md-12"><img src="{{image.path}}" alt="Slide Image" style="height: {{image.h}}px;max-height: 400px;width: {{image.w}}px;max-width: 720px;"></div>
+                                        </div>
+                                    </div>
+                                </div>
                                 {% endfor %}
                             </div>
                             <div><a class="left carousel-control" href="#carousel-1" role="button" data-slide="prev" style="background: rgba(255,255,255,0);"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-1" role="button" data-slide="next" style="background: rgba(255,255,255,0);"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
